// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test  ADD with no TYPE in TO, and too long SUB 1`] = `136`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 2`] = `152`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 3`] = `155`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 4`] = `161`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 5`] = `195`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 6`] = `202`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 7`] = `257`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 8`] = `259`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 9`] = `259`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 10`] = `260`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 11`] = `"Diagnoses: "`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 12`] = `
Array [
  Object {
    "message": "Expecting a value of length between 1 to 8. Current value has length 14",
    "range": Object {
      "end": Object {
        "character": 2,
        "line": 1,
      },
      "start": Object {
        "character": 2,
        "line": 1,
      },
    },
    "severity": 1,
    "source": "Endevor SCL extension",
  },
  Object {
    "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
    "range": Object {
      "end": Object {
        "character": 2,
        "line": 1,
      },
      "start": Object {
        "character": 2,
        "line": 1,
      },
    },
    "severity": 2,
    "source": "Endevor SCL extension",
  },
  Object {
    "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
    "range": Object {
      "end": Object {
        "character": 2,
        "line": 1,
      },
      "start": Object {
        "character": 2,
        "line": 1,
      },
    },
    "severity": 2,
    "source": "Endevor SCL extension",
  },
  Object {
    "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
    "range": Object {
      "end": Object {
        "character": 2,
        "line": 1,
      },
      "start": Object {
        "character": 2,
        "line": 1,
      },
    },
    "severity": 2,
    "source": "Endevor SCL extension",
  },
  Object {
    "message": "Invalid scl. Expecting a space before end of statement operator \\".\\".",
    "range": Object {
      "end": Object {
        "character": 2,
        "line": 1,
      },
      "start": Object {
        "character": 2,
        "line": 1,
      },
    },
    "severity": 1,
    "source": "Endevor SCL extension",
  },
]
`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 13`] = `"All tokens: "`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 14`] = `
Array [
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "ELEMENT ",
      },
    ],
    "is_eoStatement": false,
    "starti": 4,
    "value": "ADD",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 8,
    "value": "ELEMENT",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
      ",
    "starti": 16,
    "value": "'PMOVE'",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FILE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DSNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PATH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "starti": 24,
    "value": "FROM",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 29,
    "value": "DSNAME",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "MEMBER ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FILE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PATH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 36,
    "value": "'BST.P7718.SOURCE'",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 66,
    "value": "MEMBER",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FILE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PATH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
        ",
    "starti": 73,
    "value": "'PMOVE'",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "ENVIRONMENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SUBSYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TYPE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "starti": 83,
    "value": "TO",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 86,
    "value": "ENVIRONMENT",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "ENVIRONMENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SUBSYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TYPE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 98,
    "value": "'QA1'",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 107,
    "value": "SYSTEM",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "ENVIRONMENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SUBSYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TYPE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 114,
    "value": "'ECPLSYS'",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 126,
    "value": "SUBSYSTEM",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "ENVIRONMENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SUBSYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TYPE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
    ",
    "starti": 136,
    "value": "'ECPLSUBtoolong'",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "CCID ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COMMENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NEW VERSION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "UPDATE IF PRESENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DELETE INPUT SOURCE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OVERRIDE SIGNOUT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BYPASS GENERATE PROCESSOR ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN NONE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN ALL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN SYSTEMS ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN SUBSYSTEMS ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROCESSOR GROUP EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROCESSOR GROUP = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "starti": 155,
    "value": "OPtION",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 163,
    "value": "CCID",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COMMENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NEW VERSION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "UPDATE IF PRESENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DELETE INPUT SOURCE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OVERRIDE SIGNOUT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BYPASS GENERATE PROCESSOR ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN NONE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN ALL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN SYSTEMS ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN SUBSYSTEMS ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROCESSOR GROUP EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROCESSOR GROUP = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 168,
    "value": "'CCID'",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 195,
    "value": "comment",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "CCID ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NEW VERSION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "UPDATE IF PRESENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DELETE INPUT SOURCE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OVERRIDE SIGNOUT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BYPASS GENERATE PROCESSOR ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN NONE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN ALL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN SYSTEMS ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN SUBSYSTEMS ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROCESSOR GROUP EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROCESSOR GROUP = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 203,
    "value": "\\"Processor for testcase PROMOTION\\"",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "CCID ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COMMENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NEW VERSION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "UPDATE IF PRESENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DELETE INPUT SOURCE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OVERRIDE SIGNOUT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BYPASS GENERATE PROCESSOR ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN NONE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN ALL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN SYSTEMS ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN SUBSYSTEMS ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROCESSOR GROUP EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROCESSOR GROUP = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 243,
    "value": "UPDATE",
  },
  Object {
    "is_eoStatement": false,
    "starti": 250,
    "value": "UPDATE",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "CCID ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COMMENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NEW VERSION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "UPDATE IF PRESENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DELETE INPUT SOURCE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OVERRIDE SIGNOUT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BYPASS GENERATE PROCESSOR ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN NONE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN ALL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN SYSTEMS ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN SUBSYSTEMS ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROCESSOR GROUP EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROCESSOR GROUP = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 257,
    "value": "iF",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
    ],
    "is_eoStatement": true,
    "starti": 259,
    "value": ".",
  },
]
`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 15`] = `"From memo: "`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 16`] = `
Array [
  "DSName",
]
`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 17`] = `"To memo: "`;

exports[`Test  ADD with no TYPE in TO, and too long SUB 18`] = `
Array [
  "ENVironment",
  "SYStem",
  "SUBSystem",
]
`;

exports[`Test  An invalid set from 1`] = `4`;

exports[`Test  An invalid set from 2`] = `7`;

exports[`Test  An invalid set from 3`] = `51`;

exports[`Test  An invalid set from 4`] = `58`;

exports[`Test  An invalid set from 5`] = `"Diagnoses: "`;

exports[`Test  An invalid set from 6`] = `
Array [
  Object {
    "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
    "range": Object {
      "end": Object {
        "character": 2,
        "line": 1,
      },
      "start": Object {
        "character": 2,
        "line": 1,
      },
    },
    "severity": 2,
    "source": "Endevor SCL extension",
  },
  Object {
    "message": "Invalid word",
    "range": Object {
      "end": Object {
        "character": 2,
        "line": 1,
      },
      "start": Object {
        "character": 2,
        "line": 1,
      },
    },
    "severity": 1,
    "source": "Endevor SCL extension",
  },
]
`;

exports[`Test  An invalid set from 7`] = `"All tokens: "`;

exports[`Test  An invalid set from 8`] = `
Array [
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
      ",
    "starti": 4,
    "value": "SeT",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FILE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DSNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SITE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "ENVIRONMENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SUBSYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TYPE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "STAGE NUMBER ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "STAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
    ],
    "is_eoStatement": false,
    "starti": 8,
    "value": "FROM",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 13,
    "value": "STAGE",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FILE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DSNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SITE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "ENVIRONMENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SUBSYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TYPE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "STAGE NUMBER ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "STAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 19,
    "value": "1",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 21,
    "value": "SYSTEM",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FILE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DSNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SITE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "ENVIRONMENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SUBSYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TYPE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "STAGE NUMBER ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "STAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 28,
    "value": "bla",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 32,
    "value": "ENVIRONMENT",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FILE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DSNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SITE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "ENVIRONMENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SUBSYSTEM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TYPE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "STAGE NUMBER ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "STAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 44,
    "value": "blabla",
  },
  Object {
    "is_eoStatement": false,
    "starti": 51,
    "value": "INVALID",
  },
  Object {
    "is_eoStatement": true,
    "starti": 68,
    "value": ".",
  },
]
`;

exports[`Test  An invalid set from 9`] = `"From memo: "`;

exports[`Test  An invalid set from 10`] = `
Array [
  "STAge",
  "SYStem",
  "ENVironment",
]
`;

exports[`Test  An invalid set from 11`] = `"To memo: "`;

exports[`Test  An invalid set from 12`] = `Array []`;

exports[`Test  An one word 1`] = `1`;

exports[`Test  An one word 2`] = `9`;

exports[`Test  An one word 3`] = `1`;

exports[`Test  An one word 4`] = `9`;

exports[`Test  An one word 5`] = `"Diagnoses: "`;

exports[`Test  An one word 6`] = `
Array [
  Object {
    "message": "Invalid word",
    "range": Object {
      "end": Object {
        "character": 2,
        "line": 1,
      },
      "start": Object {
        "character": 2,
        "line": 1,
      },
    },
    "severity": 1,
    "source": "Endevor SCL extension",
  },
  Object {
    "message": "Invalid scl. No end of statement operator \\".\\" specified.",
    "range": Object {
      "end": Object {
        "character": 2,
        "line": 1,
      },
      "start": Object {
        "character": 2,
        "line": 1,
      },
    },
    "severity": 1,
    "source": "Endevor SCL extension",
  },
]
`;

exports[`Test  An one word 7`] = `"All tokens: "`;

exports[`Test  An one word 8`] = `
Array [
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "ELEMENT ",
      },
    ],
    "is_eoStatement": false,
    "starti": 1,
    "value": "GENERATE",
  },
]
`;

exports[`Test  An one word 9`] = `"From memo: "`;

exports[`Test  An one word 10`] = `Array []`;

exports[`Test  An one word 11`] = `"To memo: "`;

exports[`Test  An one word 12`] = `Array []`;

exports[`Test  Define pkg with notes 1`] = `"Diagnoses: "`;

exports[`Test  Define pkg with notes 2`] = `Array []`;

exports[`Test  Define pkg with notes 3`] = `"All tokens: "`;

exports[`Test  Define pkg with notes 4`] = `
Array [
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PACKAGE ",
      },
    ],
    "is_eoStatement": false,
    "starti": 4,
    "value": "DEFINE",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 11,
    "value": "PACKAGE",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY FROM PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DSNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DO NOT APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DESCRIPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
",
    "starti": 19,
    "value": "'packageId'",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 32,
    "value": "DESCRIPTION",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY FROM PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DSNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DO NOT APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
    ",
    "starti": 44,
    "value": "'package description'",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "STANDARD PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "EMERGENCY PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NONSHARABLE PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SHARABLE PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NONPROMOTION PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROMOTION PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT IS ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT NOT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT IS NOT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DO NOT VALIDATE SCL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NOTES = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NOTES ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "EXECUTION WINDOW FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY FROM PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DSNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DO NOT APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DESCRIPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "starti": 71,
    "value": "OPTION",
  },
  Object {
    "is_eoStatement": false,
    "starti": 78,
    "value": "PROMOTION",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "STANDARD PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "EMERGENCY PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NONSHARABLE PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SHARABLE PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NONPROMOTION PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROMOTION PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT IS ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT NOT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT IS NOT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DO NOT VALIDATE SCL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NOTES = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NOTES ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "EXECUTION WINDOW FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY FROM PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DSNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DO NOT APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DESCRIPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 88,
    "value": "PACKAGE",
  },
  Object {
    "is_eoStatement": false,
    "starti": 96,
    "value": "BACKOUT",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "STANDARD PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "EMERGENCY PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NONSHARABLE PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SHARABLE PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NONPROMOTION PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROMOTION PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT IS ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT NOT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT IS NOT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DO NOT VALIDATE SCL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NOTES = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NOTES ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "EXECUTION WINDOW FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY FROM PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DSNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DO NOT APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DESCRIPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 104,
    "value": "ENABLED",
  },
  Object {
    "is_eoStatement": false,
    "starti": 112,
    "value": "SHARABLE",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "STANDARD PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "EMERGENCY PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NONSHARABLE PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SHARABLE PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NONPROMOTION PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROMOTION PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT IS ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT NOT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT IS NOT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DO NOT VALIDATE SCL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NOTES = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NOTES ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "EXECUTION WINDOW FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY FROM PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DSNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DO NOT APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DESCRIPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 121,
    "value": "PACKAGE",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 129,
    "value": "NOTES",
  },
  Object {
    "is_eoStatement": false,
    "starti": 135,
    "value": "(",
  },
  Object {
    "is_eoStatement": false,
    "starti": 137,
    "value": "'sample note1'",
  },
  Object {
    "is_eoStatement": false,
    "starti": 152,
    "value": ",",
  },
  Object {
    "is_eoStatement": false,
    "starti": 167,
    "value": "'sample n\\"ote2'",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "STANDARD PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "EMERGENCY PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NONSHARABLE PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SHARABLE PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NONPROMOTION PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROMOTION PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT IS ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT NOT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT IS NOT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DO NOT VALIDATE SCL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NOTES = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NOTES ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "EXECUTION WINDOW FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY FROM PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DSNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DO NOT APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DESCRIPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 183,
    "value": ")",
  },
  Object {
    "is_eoStatement": false,
    "starti": 185,
    "value": "EXECUTION",
  },
  Object {
    "is_eoStatement": false,
    "starti": 195,
    "value": "WINDOW",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 202,
    "value": "FROM",
  },
  Object {
    "is_eoStatement": false,
    "starti": 207,
    "value": "11DEC17",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "TO ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "STANDARD PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "EMERGENCY PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NONSHARABLE PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "SHARABLE PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NONPROMOTION PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROMOTION PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT IS ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT NOT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "BACKOUT IS NOT ENABLED ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DO NOT VALIDATE SCL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NOTES = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NOTES ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY FROM PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DSNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DO NOT APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DESCRIPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 215,
    "value": "12:12",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPY FROM PACKAGE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DDNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "IMPORT SCL FROM DSNAME ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DO NOT APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "APPEND ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "DESCRIPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
    ],
    "is_eoStatement": true,
    "starti": 223,
    "value": ".",
  },
]
`;

exports[`Test  Define pkg with notes 5`] = `"From memo: "`;

exports[`Test  Define pkg with notes 6`] = `Array []`;

exports[`Test  Define pkg with notes 7`] = `"To memo: "`;

exports[`Test  Define pkg with notes 8`] = `Array []`;

exports[`Test  Generate with where clause 1`] = `81`;

exports[`Test  Generate with where clause 2`] = `98`;

exports[`Test  Generate with where clause 3`] = `"Diagnoses: "`;

exports[`Test  Generate with where clause 4`] = `
Array [
  Object {
    "message": "Expecting a value no longer than 12. Current value has length 14",
    "range": Object {
      "end": Object {
        "character": 2,
        "line": 1,
      },
      "start": Object {
        "character": 2,
        "line": 1,
      },
    },
    "severity": 1,
    "source": "Endevor SCL extension",
  },
]
`;

exports[`Test  Generate with where clause 5`] = `"All tokens: "`;

exports[`Test  Generate with where clause 6`] = `
Array [
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "ELEMENT ",
      },
    ],
    "is_eoStatement": false,
    "starti": 2,
    "value": "GENERATE",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 11,
    "value": "ELEMENT",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
   ",
    "starti": 19,
    "value": "ELM",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 23,
    "value": "THROUGH",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
     ",
    "starti": 31,
    "value": "ELM2",
  },
  Object {
    "is_eoStatement": false,
    "starti": 36,
    "value": "WHERE",
  },
  Object {
    "is_eoStatement": false,
    "starti": 42,
    "value": "CCID",
  },
  Object {
    "is_eoStatement": false,
    "starti": 47,
    "value": "OF",
  },
  Object {
    "is_eoStatement": false,
    "starti": 50,
    "value": "RETRIEVE",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 59,
    "value": "=",
  },
  Object {
    "is_eoStatement": false,
    "starti": 61,
    "value": "(",
  },
  Object {
    "is_eoStatement": false,
    "starti": 63,
    "value": "\\"ccid1\\",",
  },
  Object {
    "is_eoStatement": false,
    "starti": 72,
    "value": "\\"ccid2\\",",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
    ",
    "starti": 81,
    "value": "\\"toolong ccid 3\\")",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "CCID ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COMMENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OVERRIDE SIGNOUT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPYBACK SEARCH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPYBACK NOSEARCH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NOSOURCE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN NONE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN ALL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN SYSTEMS ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN SUBSYSTEMS ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROCESSOR GROUP EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROCESSOR GROUP = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "starti": 99,
    "value": "OPTION",
  },
  Object {
    "completionItems": Array [],
    "is_eoStatement": false,
    "starti": 106,
    "value": "CCID",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COMMENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OVERRIDE SIGNOUT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPYBACK SEARCH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "COPYBACK NOSEARCH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "NOSOURCE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN NONE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN ALL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN SYSTEMS ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN SPAN SUBSYSTEMS ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "AUTOGEN ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROCESSOR GROUP EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "PROCESSOR GROUP = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": ". ",
      },
    ],
    "is_eoStatement": false,
    "rightDistance": "
           ",
    "starti": 111,
    "value": "Test",
  },
  Object {
    "completionItems": Array [
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THROUGH ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "THRU ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "FROM ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF CURRENT ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF ALL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID OF RETRIEVE ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID EQUAL ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID = ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "WHERE CCID ",
      },
      Object {
        "documentation": "Endevor SCL keyword",
        "kind": 14,
        "label": "OPTION ",
      },
    ],
    "is_eoStatement": true,
    "starti": 116,
    "value": ".",
  },
]
`;

exports[`Test  Generate with where clause 7`] = `"From memo: "`;

exports[`Test  Generate with where clause 8`] = `Array []`;

exports[`Test  Generate with where clause 9`] = `"To memo: "`;

exports[`Test  Generate with where clause 10`] = `Array []`;
